# .prism

./: .gitattributes  .gitignore  .mcp.json  CLAUDE.md  pyproject.toml
.canopy/: prompts.jsonl
.claude-plugin/: marketplace.json
.mulch/: mulch.config.yaml
.seeds/: config.yaml  issues.jsonl
benchmarks/: EXPERIMENTS.md  README.md  assert_thresholds.py  registry.json  requirements-swebench-eval.txt  requirements.txt
docs/: incremental-indexing-and-bench-suggestions.md  prism-benchmark-status.md
plugins/prism-devtools/tests/harness/: README.md  pyproject.toml  run-harness.sh
plugins/prism-devtools/tests/harness/fixtures/: brain-bootstrap.jsonl  brain-preload.jsonl  customer-skills.jsonl  gate-validation.jsonl  prism-loop.jsonl  session-start.jsonl  sfr-injection.jsonl  skill-discovery.jsonl  skill-invocation.jsonl  subagent-hooks.jsonl  subagent-spawn.jsonl  yaml-scalar.jsonl
plugins/prism-devtools/tests/harness/lib/: common.sh  scaffold.sh
plugins/prism-devtools/tests/harness/prism_harness/: __init__.py  __main__.py  assertions.py  claude_session.py  cli.py  diagnostics.py  parser.py  reporter.py  scaffold.py
plugins/prism-devtools/tests/harness/prism_harness/tests/: __init__.py  test_brain_bootstrap.py  test_brain_preload.py  test_gate_validation.py  test_parser.py  test_prism_loop.py  test_session_start.py  test_sfr_injection.py  test_skill_discovery.py  test_skill_invocation.py  test_subagent_hooks.py  test_subagent_spawn.py  test_yaml_scalar.py
plugins/prism-devtools/tests/harness/tests/: test-brain-bootstrap.sh  test-prism-loop.sh  test-session-start.sh  test-skill-discovery.sh
scripts/: pre-commit
(+497 files in other folders)
