[project]
name = "prism-devtools"
version = "0.0.0"

[tool.pytest.ini_options]
testpaths = ["plugins/prism-devtools/tools/prism-cli/tests"]

[tool.pylint.messages_control]
disable = [
    "C0103",  # invalid-name (test classes use AC_N convention)
    "C0114",  # missing-module-docstring
    "C0115",  # missing-class-docstring
    "C0116",  # missing-function-docstring
    "C0301",  # line-too-long
    "C0411",  # wrong-import-order
    "C0413",  # wrong-import-position
    "C0117",  # unnecessary-negation
    "C0207",  # use-maxsplit-arg
    "C0415",  # import-outside-toplevel
    "R0801",  # duplicate-code
    "R0902",  # too-many-instance-attributes (dataclasses)
    "R0912",  # too-many-branches
    "R0914",  # too-many-locals
    "R0915",  # too-many-statements
    "W0611",  # unused-import
    "W0621",  # redefined-outer-name (pytest fixtures)
    "W1309",  # f-string-without-interpolation
    "W1510",  # subprocess-run-check
    "W0212",  # protected-access
    "W0702",  # bare-except
    "W0718",  # broad-exception-caught
    "W1514",  # unspecified-encoding
]
