[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "prism-harness"
version = "0.1.0"
description = "End-to-end test harness CLI for prism-devtools"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
prism-harness = "prism_harness.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["prism_harness*"]
